Support for non-virtual-threads environments via MethodHandle instantiation of virtual-thread executor services